--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,2 @@
 <h2>index page</h2>
-<h1>qwfqfqf</h1>
-<img src="/public/images/00acc214e5cdab6dc978cde7281bb423.jpg" width="100" alt="">
+<a href="about">about</a>
