--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,18 +1,23 @@
 <nav class="menu">
     <div class="menu__links">
        <ul class="menu__ul">
-            <li><a href="/about" class="menu__sub">about</a>
+            {{!-- <li><a href="/about" class="menu__sub">about</a>
                 <ul>
                     <li><a href="/about">about</a></li>
                     <li><a href="/about">about</a></li>
                     <li><a href="/about">about</a></li>
                     <li><a href="/about">about</a></li>
                 </ul>
-            </li>
-            <li><a href="/about">about</a></li>
-            <li><a href="/about">about</a></li>
-            <li><a href="/about">about</a></li>
-            <li><a href="/about">about</a></li>
+            </li> --}}
+            <li><a href="/about">Главная</a></li>
+            <li><a href="/about">Новости</a></li>
+            <li><a href="/about">О библиотеке</a></li>
+            <li><a href="/about">Тифлобиблиографический отдел</a></li>
+            <li><a href="/about">Новые поступления</a></li>
+            <li><a href="/about">Доступная среда</a></li>
+            <li><a href="/about">Из жизни незрячих</a></li>
+            <li><a href="/about">Цифровая библиотека</a></li>
+            <li><a href="/about">FAQ</a></li>
        </ul>
     </div>
 </nav>
