--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,6 +1,14 @@
 @import "color"
 @import "font"
 @import "menu"
-*
-    margin: 0 0
-    padding: 0 0
+*, *:befor,*:after
+    margin: 0
+    padding: 0
+    border: 0
+    box-sizing: border-box
+html, body
+    height: 100%
+.wrapper
+    width: 100%
+    display: flex
+    justify-content: center
