--- a/public/stylesheets/_menu.sass
+++ b/public/stylesheets/_menu.sass
@@ -1,37 +1,23 @@
 .menu
-    background-color: $one-color
-    width: 100%
-    height: 3rem
-    &__links
-    &__ul
-        display: flex
-        margin: 0
-        justify-content: center
-        padding: 0
-        text-align: center
-        vertical-align: middle
-        list-style-type: none
-        li
-            padding: 0.6rem 0.7rem
-            // display: inline-block
-            &:hover
-                background-color: $two-color
-                .sub
-                    display: block
-            a
-                text-decoration: none
-                font-size: 1.5rem
-                color: $head-fc
-    &__sub
-        li
-            &:hover
-                background-color: $one-color
-.sub
-    margin-top: 0.25rem
-    padding: 0 0
-    display: none
-    background-color: $two-color
+
     li
-        padding: 0.5rem 0
-        display: block
-        background-color: $two-color
+        list-style: none
+    a
+        text-decoration: none
+    &__list
+        display: flex
+        >li
+            &:hover
+                .sub-menu__list
+                    display: block
+
+.sub-menu
+    &__list
+        display: none
+
+        top: 2rem
+        position: absolute
+        padding-top: 2rem 0 0 0
+    &__link
+        display: inline-block
+        padding: 5px
