--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -3,58 +3,47 @@
   font-weight: 500;
 }
 
-.menu {
-  background-color: #d8bebd;
-  width: 100%;
-  height: 3rem;
+.menu li {
+  list-style: none;
 }
 
-.menu__ul {
-  display: flex;
-  margin: 0;
-  justify-content: center;
-  padding: 0;
-  text-align: center;
-  vertical-align: middle;
-  list-style-type: none;
-}
-
-.menu__ul li {
-  padding: 0.6rem 0.7rem;
-}
-
-.menu__ul li:hover {
-  background-color: #b4959b;
-}
-
-.menu__ul li:hover .sub {
-  display: block;
-}
-
-.menu__ul li a {
+.menu a {
   text-decoration: none;
-  font-size: 1.5rem;
-  color: #41514d;
 }
 
-.menu__sub li:hover {
-  background-color: #d8bebd;
+.menu__list {
+  display: flex;
 }
 
-.sub {
-  margin-top: 0.25rem;
-  padding: 0 0;
-  display: none;
-  background-color: #b4959b;
-}
-
-.sub li {
-  padding: 0.5rem 0;
+.menu__list > li:hover .sub-menu__list {
   display: block;
-  background-color: #b4959b;
 }
 
-* {
-  margin: 0 0;
-  padding: 0 0;
+.sub-menu__list {
+  display: none;
+  top: 2rem;
+  position: absolute;
+  padding-top: 2rem 0 0 0;
+}
+
+.sub-menu__link {
+  display: inline-block;
+  padding: 5px;
+}
+
+*, *:befor, *:after {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+}
+
+.wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
