--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,18 +1,41 @@
 <nav class="menu">
-    <div class="menu__links">
-       <ul class="menu__ul">
-            <li><a href="/about" class="menu__sub">about</a>
-                <ul>
-                    <li><a href="/about">about</a></li>
-                    <li><a href="/about">about</a></li>
-                    <li><a href="/about">about</a></li>
-                    <li><a href="/about">about</a></li>
-                </ul>
-            </li>
-            <li><a href="/about">about</a></li>
-            <li><a href="/about">about</a></li>
-            <li><a href="/about">about</a></li>
-            <li><a href="/about">about</a></li>
-       </ul>
-    </div>
+   <ul class="menu__list">
+       <li>
+           <a href="" class="menu__link">Главная</a>
+       </li>
+       <li>
+           <a href="" class="menu__link">Новости</a>
+           <ul class="sub-menu__list">
+               <li>
+                   <a href="" class="sub-menu__link">Важные новости</a>
+                </li>
+                <li>
+                   <a href="" class="sub-menu__link">Новости</a>
+                </li>
+                <li>
+                   <a href="" class="sub-menu__link">Выставки</a>
+                </li>
+                <li>
+                   <a href="" class="sub-menu__link">Мероприятия</a>
+                </li>
+           </ul>
+       </li>
+       <li>
+           <a href="" class="menu__link">О библиотеке</a>
+           <ul class="sub-menu__list">
+               <li>
+                   <a href="" class="sub-menu__link">Важные новости</a>
+                </li>
+                <li>
+                   <a href="" class="sub-menu__link">Новости</a>
+                </li>
+                <li>
+                   <a href="" class="sub-menu__link">Выставки</a>
+                </li>
+                <li>
+                   <a href="" class="sub-menu__link">Мероприятия</a>
+                </li>
+           </ul>
+       </li>
+   </ul>
 </nav>
