--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,83 +1,83 @@
 
 <nav class="menu" >
-    <div class="container">
-        <ul class="menu__list">
-            <li>
-                <a href="" class="menu__link">Главная</a>
-            </li>
-            <li>
-                <a href="" class="menu__link" >Новости</a>
-                <ul class="sub-menu__list" >
-                    <li>
-                        <a href="" class="sub-menu__link">Важные новости</a>
+    
+    <ul class="menu__list">
+        <li>
+            <a href="" class="menu__link">Главная</a>
+        </li>
+        <li>
+            <a href="" class="menu__link" >Новости</a>
+            <ul class="sub-menu__list" >
+                <li>
+                    <a href="" class="sub-menu__link">Важные новости</a>
+                </li>
+                <li>
+                    <a href="" class="sub-menu__link">Выставки</a>
+                </li>
+                <li>
+                    <a href="" class="sub-menu__link">Мероприятия</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="" class="menu__link">О библиотеке</a>
+            <ul class="sub-menu__list">
+                <li>
+                    <a href="" class="sub-menu__link">Контакты</a>
+                </li>
+                <li>
+                    <a href="" class="sub-menu__link">Связь с нами</a>
+                </li>
+                <li>
+                    <a href="" class="sub-menu__link">СМИ о нас</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="" class="menu__link">Тифлобиблиографический отдел</a>
+            <ul class="sub-menu__list">
+                <li>
+                    <a href="" class="sub-menu__link">Библиограф рекомендует</a>
                     </li>
                     <li>
-                        <a href="" class="sub-menu__link">Выставки</a>
+                    <a href="" class="sub-menu__link">Мобильный помощник</a>
                     </li>
                     <li>
-                        <a href="" class="sub-menu__link">Мероприятия</a>
+                    <a href="" class="sub-menu__link">Специалистам</a>
                     </li>
-                </ul>
-            </li>
-            <li>
-                <a href="" class="menu__link">О библиотеке</a>
-                <ul class="sub-menu__list">
-                    <li>
-                        <a href="" class="sub-menu__link">Контакты</a>
+            </ul>
+        </li>
+        <li>
+            <a href="" class="menu__link">Новые поступления</a>
+        </li>
+        <li>
+            <a href="" class="menu__link">Доступная среда</a>
+            <ul class="sub-menu__list">
+                <li>
+                    <a href="" class="sub-menu__link">Приказы по утверждению Порядков доступности</a>
                     </li>
                     <li>
-                        <a href="" class="sub-menu__link">Связь с нами</a>
+                    <a href="" class="sub-menu__link">Условия доступности инвалидов</a>
                     </li>
                     <li>
-                        <a href="" class="sub-menu__link">СМИ о нас</a>
+                    <a href="" class="sub-menu__link">Методическое обеспечение в области предоставления услуг людям
+    с физическими ограничениями здоровья и формирования доступной среды</a>
                     </li>
-                </ul>
-            </li>
-            <li>
-                <a href="" class="menu__link">Тифлобиблиографический отдел</a>
-                <ul class="sub-menu__list">
                     <li>
-                        <a href="" class="sub-menu__link">Библиограф рекомендует</a>
-                        </li>
-                        <li>
-                        <a href="" class="sub-menu__link">Мобильный помощник</a>
-                        </li>
-                        <li>
-                        <a href="" class="sub-menu__link">Специалистам</a>
-                        </li>
-                </ul>
-            </li>
-            <li>
-                <a href="" class="menu__link">Новые поступления</a>
-            </li>
-            <li>
-                <a href="" class="menu__link">Тифлобиблиографический отдел</a>
-                <ul class="sub-menu__list">
-                    <li>
-                        <a href="" class="sub-menu__link">Приказы по утверждению Порядков доступности</a>
-                        </li>
-                        <li>
-                        <a href="" class="sub-menu__link">Условия доступности инвалидов</a>
-                        </li>
-                        <li>
-                        <a href="" class="sub-menu__link">Методическое обеспечение в области предоставления услуг людям
-        с физическими ограничениями здоровья и формирования доступной среды</a>
-                        </li>
-                        <li>
-                        <a href="" class="sub-menu__link">КАЛЕНДАРНЫЙ ПЛАН ИНФОРМАЦИОННО-МЕТОДИЧЕСКИХ МЕРОПРИЯТИЙ</a>
-                        </li>
-                </ul>
-            </li>
-            <li>
-                <a href="" class="menu__link">Из жизни незрячих</a>
-            </li>
-            <li>
-                <a href="" class="menu__link">Цифровая библиотека</a>
-            </li>
-            <li>
-                <a href="" class="menu__link">FAQ</a>
-            </li>
-        </ul>
-   </div>
+                    <a href="" class="sub-menu__link">КАЛЕНДАРНЫЙ ПЛАН ИНФОРМАЦИОННО-МЕТОДИЧЕСКИХ МЕРОПРИЯТИЙ</a>
+                    </li>
+            </ul>
+        </li>
+        <li>
+            <a href="" class="menu__link">Из жизни незрячих</a>
+        </li>
+        <li>
+            <a href="" class="menu__link">Цифровая библиотека</a>
+        </li>
+        <li>
+            <a href="" class="menu__link">FAQ</a>
+        </li>
+    </ul>
+ 
 </nav>
 {{!-- <script src="/javascript/menu.js"></script> --}}
