--- a/public/stylesheets/_color.sass
+++ b/public/stylesheets/_color.sass
@@ -5,3 +5,6 @@ $footer-color: #b9c0dc
 $content-color: #e8ecef
 $footer-text: #2949ad
 $bor-menu-color: #cfb2b8
+$new-con-color: #d6d6ee
+$news-hover-color: #ffffff6e
+$font-new-box: #080b27
