--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,110 @@
-<div class="content">
-    <div class="container">
-        <div class="content__row">
-            <h1>Добро пожаловать!</h1>
+<div class="container">
+    <div class="content">
+        <div class="par-title">
+            <h1>Добро пожаловать на сайт ГУК "Областная специальная библиотека для слепых"</h1>
+        </div>
+        <div class="cor-news">
+            <div class="cor">
+
+            </div>
+            <div class="news">
+                
+            </div>
+        </div>
+        <div class="par-title">
+            <p>Новости</p>
+        </div>
+        <div class="news">
+            <div class="new">
+                <div class="new__img">
+                    <img src="/images/1623468823_7-krasivosti_pro-p-galago-zverek-zhivotnie-krasivo-foto-7.jpg" alt="">
+                </div>
+                <div class="new__content">
+                    <div class="new__title">
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="new__htext">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam molestiae esse dolores ratione voluptas voluptate officiis quo explicabo temporibus corporis.</p>   
+                    </div>
+                
+                    <input type="button" class="new__btn" value="Просмотреть">
+                </div>
+            </div>
+              <div class="new">
+                <div class="new__img">
+                    <img src="/images/467de52737312e29aa2e98df01c6cb7f.jpg" alt="">
+                </div>
+                <div class="new__content">
+                    <div class="new__title">
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="new__htext">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam molestiae esse dolores ratione voluptas voluptate officiis quo explicabo temporibus corporis.</p>   
+                    </div>
+                
+                    <input type="button" class="new__btn" value="Просмотреть">
+                </div>
+            </div>
+              <div class="new">
+                <div class="new__img">
+                    <img src="/images/467de52737312e29aa2e98df01c6cb7f.jpg" alt="">
+                </div>
+                <div class="new__content">
+                    <div class="new__title">
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="new__htext">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam molestiae esse dolores ratione voluptas voluptate officiis quo explicabo temporibus corporis.</p>   
+                    </div>
+                
+                    <input type="button" class="new__btn" value="Просмотреть">
+                </div>
+            </div>
+              <div class="new">
+                <div class="new__img">
+                    <img src="/images/467de52737312e29aa2e98df01c6cb7f.jpg" alt="">
+                </div>
+                <div class="new__content">
+                    <div class="new__title">
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="new__htext">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam molestiae esse dolores ratione voluptas voluptate officiis quo explicabo temporibus corporis.</p>   
+                    </div>
+                
+                    <input type="button" class="new__btn" value="Просмотреть">
+                </div>
+            </div>
+              <div class="new">
+                <div class="new__img">
+                    <img src="/images/467de52737312e29aa2e98df01c6cb7f.jpg" alt="">
+                </div>
+                <div class="new__content">
+                    <div class="new__title">
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="new__htext">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam molestiae esse dolores ratione voluptas voluptate officiis quo explicabo temporibus corporis.</p>   
+                    </div>
+                
+                    <input type="button" class="new__btn" value="Просмотреть">
+                </div>
+            </div>
+              <div class="new">
+                <div class="new__img">
+                    <img src="/images/467de52737312e29aa2e98df01c6cb7f.jpg" alt="">
+                </div>
+                <div class="new__content">
+                    <div class="new__title">
+                        <p>Lorem ipsum dolor sit.</p>
+                    </div>
+                    <div class="new__htext">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam molestiae esse dolores ratione voluptas voluptate officiis quo explicabo temporibus corporis.</p>   
+                    </div>
+                
+                    <input type="button" class="new__btn" value="Просмотреть">
+                </div>
+            </div>
         </div>
     </div>
 </div>
