--- a/public/stylesheets/_content.sass
+++ b/public/stylesheets/_content.sass
@@ -1,8 +1,9 @@
 .content
-    min-width: 100%
-    background-color: $content-color
-    flex: 1 1 auto
+    width: 80%
     margin: 0 auto
+    display: flex
+    flex-direction: column
+    align-items: center
+
     h1
-        text-align: center
         color: $menu-fc
