--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -11,6 +11,11 @@ li {
   list-style: none;
 }
 
+h1, p {
+  font-family: 'Roboto', sans-serif;
+  color: #1e3a33;
+}
+
 .menu {
   border-bottom: 2px solid #cfb2b8;
   color: #1e3a33;
@@ -107,15 +112,60 @@ li {
 }
 
 .content {
-  min-width: 100%;
-  background-color: #e8ecef;
-  flex: 1 1 auto;
+  width: 80%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .content h1 {
-  text-align: center;
   color: #1e3a33;
+}
+
+.news {
+  margin: 10px 0;
+  background-color: #d6d6ee;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.new {
+  position: relative;
+  margin: 7px;
+  flex: 1 0 30%;
+}
+
+.new:hover .new__content {
+  opacity: 1;
+  transition: 1s;
+}
+
+.new__content {
+  padding: 10px;
+  opacity: 0;
+  background-color: #ffffff6e;
+  position: absolute;
+  bottom: 0;
+}
+
+.new__img {
+  padding: 0;
+}
+
+.new__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  padding: 0;
+}
+
+.new__title p {
+  font-weight: 600;
+}
+
+.new p {
+  color: #080b27;
 }
 
 *, *:befor, *:after {
@@ -137,4 +187,24 @@ html, body {
   flex-direction: column;
   min-height: 100%;
   overflow: hidden;
+}
+
+.container {
+  min-width: 100%;
+  background-color: #e8ecef;
+  flex: 1 1 auto;
+  margin: 0 auto;
+}
+
+.par-title {
+  width: 100%;
+  background-color: #d6d6ee;
+  text-align: center;
+  margin: 5px 0;
+}
+
+.par-title p {
+  margin: 0;
+  padding: 0;
+  font-size: 3rem;
 }
