--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -3,6 +3,7 @@
 @import "menu"
 @import "footer"
 @import "content"
+@import "news"
 
 *, *:befor, *:after
     margin: 0 0
@@ -20,3 +21,17 @@ html, body
     flex-direction: column
     min-height: 100%
     overflow: hidden
+.container
+    min-width: 100%
+    background-color: $content-color
+    flex: 1 1 auto
+    margin: 0 auto
+.par-title
+    width: 100%
+    background-color: $new-con-color
+    text-align: center
+    margin: 5px 0
+    p
+        margin: 0
+        padding: 0
+        font-size: 3rem
